--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                 </div>
 
                                 <div class="option-modal-input">
-                                    <input value="yellow" type="radio" name="colorEvent"></input>
+                                    <input value="rgb(136, 136, 2)" type="radio" name="colorEvent"></input>
                                     <div class="boxColorEvent colorEvent-yellow"></div>
                                 </div>
 
